@@ -6,7 +6,7 @@
 
     <groupId>com.github.exobite.mc</groupId>
     <artifactId>PlaytimeRewardsRewrite</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.2</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -50,12 +50,6 @@
             <artifactId>spigot-api</artifactId>
             <version>1.17.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.9.0</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
     
